--- a/documentation/thesis/thesis_abstract.tex
+++ b/documentation/thesis/thesis_abstract.tex
@@ -35,6 +35,6 @@ To evaluate the software framework and hardware, two digital sensors
 were characterised and tested under the same conditions for noise,
 temperature dependence and linearity. The result is that both sensors
 can only be used under certain conditions, as the noise intensity is
-higher than the specified 50 mühT and the value ranges fluctuate too
+higher than the specified 50 \(\mu\)T and the value ranges fluctuate too
 much as a result. It is recommended to consider analogue sensors or NMR
 probes in the future.
