--- a/documentation/thesis/thesis_document.tex
+++ b/documentation/thesis/thesis_document.tex
@@ -3511,6 +3511,10 @@ measurement of stronger magnets is not possible. The \emph{N45
 12x12x12mm} magnets used in the application typically have a field
 strength of around \emph{100mT} at a distance of \emph{10mm}.
 
+The \emph{TLV493D}, on the other hand, is able to measure these
+directly, but does not achieve the required accuracy due to strong noise
+and steep temperature coefficients.
+
 In the following chapter, recommendations for action are defined, which
 were derived from the analysis results.
 
